force-app/main/default/objects/sma__MADataLoadSegment__c/sma__MADataLoadSegment__c.object-meta.xml
<CustomObject>
    <label>MapAnything Data Load Segment</label>
    <nameField>
        <displayFormat>{000}</displayFormat>
        <label>MapAnything Data Load Segment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MapAnything Data Load Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>