force-app/main/default/objects/sma__MADataLoadSegment__c/fields/sma__DataLoad__c.field-meta.xml
<CustomField>
    <fullName>sma__DataLoad__c</fullName>
    <description>This is the parent-child relationship between data load segments and data loads. The data load itself may have many segments, each of which will have the settings from the data load applied to it.</description>
    <inlineHelpText>This is the parent-child relationship between data load segments and data loads.</inlineHelpText>
    <label>MapAnything Data Load</label>
    <referenceTo>sma__MADataLoad__c</referenceTo>
    <relationshipLabel>MapAnything Data Load Segments</relationshipLabel>
    <relationshipName>MapAnything_Data_Load_Segments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>