force-app/main/default/objects/sma__MADataLoadSegment__c/fields/sma__Records__c.field-meta.xml
<CustomField>
    <fullName>sma__Records__c</fullName>
    <label>Records</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>