force-app/main/default/objects/sma__MADataLoadSegment__c/fields/sma__Total_Errors__c.field-meta.xml
<CustomField>
    <fullName>sma__Total_Errors__c</fullName>
    <label>Total Errors</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>